Fix - single course gaps

--- a/assets/scss/pages/_single-course.scss
+++ b/assets/scss/pages/_single-course.scss
@@ -52,13 +52,6 @@
 		top: 0;
 	}
 
-	&--badges {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		gap: 12px;
-	}
-
 	&--btn {
 		border-radius: $border_radius_100;
 	}
@@ -81,7 +74,6 @@
 		height: fit-content;
 		@include masteriyo-shadow-1;
 		border-radius: $border_radius_8;
-		gap: 20px;
 		display: flex;
 		flex-direction: column;
 		padding-top: $spacing_24px;
@@ -97,11 +89,12 @@
 			display: flex;
 			flex-direction: row;
 			flex-wrap: wrap;
-			row-gap: 18px;
+			margin-top: $spacing_20px;
 			padding: 0 $spacing_24px;
 
 			& > div {
 				flex: 1 1 50%;
+				margin-top: $spacing_20px;
 			}
 
 			span {
@@ -117,7 +110,7 @@
 
 		.masteriyo-course--content__description {
 			padding: 0 $spacing_24px;
-			margin-top: $spacing_8px;
+			margin-top: $spacing_30px;
 			margin-bottom: 0;
 
 			.title {
@@ -163,7 +156,6 @@
 		// Category
 		&__category {
 			display: flex;
-			gap: 8px;
 			flex-wrap: wrap;
 			margin-bottom: $spacing_14px;
 			padding: 0 $spacing_32px;
@@ -280,7 +272,6 @@
 
 			&__category {
 				padding: 0;
-				margin: 0 0 $spacing_14px 0;
 			}
 
 			&__title {
@@ -353,8 +344,8 @@
 // Tabs
 .masteriyo-stab {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: row;
-	gap: 40px;
 	border-top: 1px solid var(--masteriyo-color-border);
 	border-bottom: 2px solid var(--masteriyo-color-border);
 	font-size: 18px;
@@ -364,15 +355,13 @@
 	word-break: break-all;
 
 	> div {
-		font-weight: 700;
-	}
-
-	> * {
-		padding: $spacing_15px 0;
+		text-align: center;
+		padding: $spacing_20px;
 		cursor: pointer;
 	}
 
 	> .active-tab {
+		font-weight: 700;
 		border-bottom: 2px solid var(--masteriyo-color-primary);
 		color: var(--masteriyo-color-primary);
 		margin-bottom: -#{$spacing_2px};
@@ -408,27 +397,33 @@
 			list-style: none;
 			display: flex;
 			flex-direction: row;
-			gap: 8px;
 			margin: inherit;
 			font-size: 14px;
 			font-weight: 400;
 			line-height: 16px;
 			letter-spacing: 0.005em;
 			padding: 0;
+			margin-left: -#{$spacing_8px};
+			margin-right: -#{$spacing_8px};
 		}
 
-		ul li:first-child::before {
-			display: none;
-		}
+		ul.masteriyo-shortinfo-wrap li {
+			margin-left: $spacing_8px;
+			margin-right: $spacing_8px;
 
-		ul li::before {
-			content: "";
-			background: var(--masteriyo-color-grey-dark);
-			display: inline-block;
-			width: 0.3em;
-			height: 0.3em;
-			margin: 0 $spacing_4px $spacing_2px 0;
-			border-radius: $border_radius_50;
+			&:first-child::before {
+				display: none;
+			}
+
+			&::before {
+				content: "";
+				background: var(--masteriyo-color-grey-dark);
+				display: inline-block;
+				width: 0.3em;
+				height: 0.3em;
+				margin: 0 $spacing_4px $spacing_2px 0;
+				border-radius: $border_radius_50;
+			}
 		}
 
 		.masteriyo-expand-collape-all {
@@ -515,11 +510,11 @@
 		.masteriyo-ltc {
 			display: flex;
 			flex-direction: row;
-			gap: 16px;
-		}
-
-		.masteriyo-clessons {
 			font-size: 16px;
+
+			& > * {
+				margin-left: $spacing_16px;
+			}
 		}
 
 		.masteriyo-cbody {
@@ -565,14 +560,6 @@
 			}
 		}
 
-		.masteriyo-time {
-			gap: 8px;
-
-			.masteriyo-icon-svg svg {
-				width: 16px;
-				height: 16px;
-			}
-		}
 		.masteriyo-time-btn {
 			.masteriyo-btn {
 				padding: $spacing_6px $spacing_12px;
@@ -624,7 +611,6 @@
 		margin: $spacing_20px auto;
 		padding: $spacing_20px;
 		border-radius: $border_radius_50;
-		gap: 20px;
 		font-weight: 600;
 		display: flex;
 		align-items: center;
@@ -633,6 +619,10 @@
 			width: 20px;
 			height: 20px;
 			fill: var(--masteriyo-color-golden);
+		}
+
+		.masteriyo-rnumber {
+			margin-left: $spacing_20px;
 		}
 	}
 
